--- a/src/components/Category/Category.css
+++ b/src/components/Category/Category.css
@@ -1,3 +1,4 @@
+/* every categories css  */
 .category{
     height: 630px;
     width: 100%;
@@ -9,8 +10,6 @@
 .category img{
     height: 250px;
     width: 100%;
-    /* text-align: center; */
-    /* justify-content: center; */
     padding: 7px 7px 0 7px;
     border-radius: 15px;
     margin: auto;
