--- a/src/components/Category/Category.css
+++ b/src/components/Category/Category.css
@@ -13,6 +13,7 @@
     padding: 7px 7px 0 7px;
     border-radius: 15px;
     margin: auto;
+    object-fit: cover;
 }
 .category_name{
     font-family: 'Lato';
