--- a/src/components/Fitness/Fitness.css
+++ b/src/components/Fitness/Fitness.css
@@ -5,11 +5,11 @@
 }
 .fitness_body{
     margin: 0;
-    padding: 5%;
+    padding: 1% 5% 5% 5%;
     background-color: aliceblue;
 }
 .fitness_body p {
-    font-size: 20px;
+    font-size: 22px;
     font-weight: 600;
 }
 .categories_container{
